Make sure to add ellipsis when width is too small.

--- a/styles/fonts/all.css
+++ b/styles/fonts/all.css
@@ -3,4 +3,7 @@
 
 .collapsible > li > header {
 	font-weight: bold;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
